# chatbot

./: .dist.env  Dockerfile  README.md  compose.yaml  pyproject.toml
scripts/: format.sh  lint.sh
src/: app.py  config.toml
