[project]
name = "chatbot"
version = "0.1.0"
description = "Simple chatbot based on streamlit.io"
authors = [
    {name = "polos.stanislav@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.50.0,<2.0.0)",
    "openai (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "mypy (>=1.18.2,<2.0.0)",
    "ruff (>=0.13.3,<0.14.0)",
    "black (>=25.9.0,<26.0.0)"
]

[tool.ruff]
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = ["F", "I", "PL", "E", "W", "UP", "T20", "C4", "C90", "PTH", "RET", "SIM"]
ignore = ["D104", "D107", "D205", "PLR2004", "SIM105"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
skip-magic-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.pylint]
max-args = 12

[tool.ruff.lint.isort]
lines-after-imports = 2

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "openai.*",
    "streamlit.*",
]
ignore_missing_imports = true
